Tries to fix video border-radius overflow on iOS Safari

--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,7 @@ nav a.active {
 }
 
 [data-device] {
+	position: relative;
 	z-index: 1;
 	overflow: hidden;
 	-webkit-backface-visibility: hidden;
